Edit & Change Cart-experience component

--- a/src/app/domains/checkout-page/checkout-page.component.html
+++ b/src/app/domains/checkout-page/checkout-page.component.html
@@ -6,8 +6,18 @@
         <h2 class="experience-cart__main-title">Your Experiences:</h2>
         <section class="main__experience-cart">
             
-            <app-cart-experience />
-            <app-cart-experience />
+            <article class="booking__card">
+
+                <img class="booking__icon" src="assets/img/bg-card.jpg" alt="experience icon">
+            
+                <div class="booking-container">
+                    <p class="booking__title">EXPERIENCE 1</p>
+                    <p class="booking__price">$750,000</p>
+                    <p class="booking__place">Melgar, Cololombia</p>
+                    <p class="booking__date"> <span>Date: </span> 10 / 20</p>
+                </div>
+            
+            </article>
 
         </section>
     </div>
