--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
 :root {
   --main-green: #5d9046;
   --white-bg: #feeceb;
+  --skin-color: #deddc0;
   --mochiy-title-font: "Mochiy Pop P One", sans-serif;
   --aclonica-title-font: "Aclonica", sans-serif;
   --arvo-subtitle-font: "Arvo", serif;
