--- a/src/app/components/cart-experience/cart-experience.component.css
+++ b/src/app/components/cart-experience/cart-experience.component.css
@@ -1,108 +1,77 @@
-.experience-cart__card {
+.booking__card {
   position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  column-gap: 1rem;
   row-gap: 1rem;
   padding: 1rem;
-  border: 2px solid #000;
-  background-color: #ffffff;
+  border: 3px solid #000;
+  background-color: rgba(170, 169, 169, 0.486);
   border-radius: 10px;
+  margin: .5rem 1rem;
 }
 
-.experience-cart__title,
-.experience-cart__price {
-  font-size: clamp(1rem, 4vw, 1.3rem);
+.booking__main-title {
+  font-size: clamp(1.4rem, 6vw, 1.5rem);
+  font-family: var(--arvo-subtitle-font);
+  font-weight: 600;
+  margin: 0.8rem 0;
+  overflow: hidden;
+}
+
+.booking__icon {
+  max-width: 4rem;
+}
+
+.booking__title,
+.booking__price,
+.booking__date,
+.booking__place {
+  font-size: clamp(1rem, 3vw, 1.3rem);
   font-family: var(--source3-text-font);
   font-weight: 600;
+  overflow: hidden;
 }
 
-.experience-cart__right-container {
+.booking__date span {
+  font-weight: bolder;
+}
+
+.booking-container {
   display: flex;
   flex-direction: column;
 }
 
-.experience-cart__right-container {
-  row-gap: 0.5rem;
+.booking-container {
+  row-gap: 0.2rem;
 }
 
-.experience-cart__title {
+.booking__title {
   width: 100%;
   text-overflow: ellipsis;
   overflow: hidden;
 }
 
-.experience-cart__icon {
+.booking__icon {
+  border-radius: 10px;
   width: 100%;
-  height: 20%;
 }
 
-.experience-cart__delete {
+.booking__delete {
   position: absolute;
-  width: clamp(1.6rem, 8vw, 2.2rem);
+  width: clamp(1.7rem, 8vw, 2.2rem);
   cursor: pointer;
-  bottom: 4%;
-  right: 3%;
+  bottom: 10%;
+  right: 5%;
 }
 
-.booking-date__container {
-  display: flex;
-  flex-direction: column;
-  font-family: var(--arvo-subtitle-font);
-  max-width: 50%;
-  row-gap: .5rem;
-}
-
-.booking-date__date,
-.booking-date__time {
-  font-weight: 600;
-}
-
-.booking-date__container input {
-  width: 8rem;
-}
-
-.booking-date__container:first-child {
-  margin-top: 1rem;
-}
-
-.booking-date__container:last-child {
-  margin-bottom: 0rem;
-}
-
-@media (min-width: 1024px) {
-
-  .experience-cart__card {
-    flex-direction: row;
-  }
-
-  .experience-cart__icon {
-    border-radius: 10px;
-    width: 10rem;
-    height: 10rem;
-  }
-
-  .experience-cart__left-container,
-  .experience-cart__right-container {
-    flex-direction: row;
-  }
-
-  .experience-cart__right-container {
-    padding: 1rem;
-    min-width: 100%;
-    flex-direction: column;
-  }
-
-  .experience-cart__title {
-    white-space: nowrap;
-  }
-
-  .experience-cart__delete {
-    width: clamp(0.4rem, 8vw, 2rem);
-    bottom: 8%;
-    right: 2%;
-  }
-
-  .booking-date__container input {
+@media (min-width: 768px) {
+  .booking__icon {
     max-width: 9rem;
   }
+
+  .booking-container {
+    row-gap: 0.5rem;
+  }
+  
 }
