Edit & Change Cart-experience component and booking-card component

--- a/src/app/domains/user-settings/user-settings.component.html
+++ b/src/app/domains/user-settings/user-settings.component.html
@@ -35,8 +35,8 @@
         @if(userBookings()) {
             <section class="user-bookings">
                 <h2 class="bookings__main-title">Your Bookings</h2>
-                <app-cart-experience/>
-                <app-cart-experience/>
+                <app-booking-card/>
+                <app-booking-card/>
             </section>
         }
 
