--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
 :root {
   --main-green: #5d9046;
   --white-bg: #feeceb;
-  --skin-color: #deddc0;
   --mochiy-title-font: "Mochiy Pop P One", sans-serif;
   --aclonica-title-font: "Aclonica", sans-serif;
   --arvo-subtitle-font: "Arvo", serif;
@@ -102,4 +101,25 @@ body {
 
 ::view-transition-new(root) {
   animation: fadeIn .5s ease 0s 1 normal forwards;
+}
+
+::-webkit-scrollbar {
+  border: 2px solid #000000;
+  
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7ead6a;
+  border-radius: 10px;
+  border: 2px solid #000000;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #597b4b;
+}
+
+/* Para Firefox */
+body {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
 }
