--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="experience__card__details">
         <h2 class="experience__card__title">{{title}}</h2>
-        <h3 class="experience__card__price">${{price}}</h3>
+        <h3 class="experience__card__price">{{price | currency}}</h3>
     </div>
     <div class="experience__card__features">
         <div class="experience__card__feature">
