--- a/src/app/domains/aboutus/aboutus.component.html
+++ b/src/app/domains/aboutus/aboutus.component.html
@@ -1,25 +1,29 @@
 <app-header/>
 
     <main>
-        <section id="boxes">
+        <section class="section">
+            <img src="https://images.unsplash.com/photo-1717496002081-38a90d3cba26?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagencarro">
+        </section>
 
-            <div id="box1">
+        <section class="boxes">
+
+            <div class="box1">
             </div>
     
-            <div id="box2">
+            <div class="box2">
             </div>
 
-            <div id="box3">
+            <div class="box3">
             </div>
 
-            <div id="box4">
+            <div class="box4">
             </div>
     
         </section>
 
         <section>
-            <div id="Container">
-                <div id="InformacionGeneral">
+            <div class="Container">
+                <div class="InformacionGeneral">
                     <h1>Quienes somos</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Esse fugiat voluptas sed, sunt consequuntur facilis iure in 
@@ -31,9 +35,9 @@
             <div class="contenedor-acordeon">
     
                 <div class="acordeon">
-                    <input type="radio" name="acordeon" id="btn-acordeon1" class="btn-acordeon">
+                    <input type="radio" name="acordeon" class="btn-acordeon1" class="btn-acordeon">
                     <label for="btn-acordeon1">
-                        <span class="material-symbols-outlined">arrow_drop_down</span>
+                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
                             <h3>El grupo</h3>
                     </label>
                     <div class="contenido-acordeon">
@@ -44,9 +48,9 @@
                 </div>
     
                 <div class="acordeon">
-                    <input type="radio" name="acordeon" id="btn-acordeon2" class="btn-acordeon">
+                    <input type="radio" name="acordeon" class="btn-acordeon2" class="btn-acordeon">
                     <label for="btn-acordeon2">
-                        <span class="material-symbols-outlined">arrow_drop_down</span>
+                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
                         <h3>Nuestros valores</h3>
                     </label>
                     <div class="contenido-acordeon">
@@ -57,9 +61,9 @@
                 </div>
     
                 <div class="acordeon">
-                    <input type="radio" name="acordeon" id="btn-acordeon3" class="btn-acordeon">
+                    <input type="radio" name="acordeon" class="btn-acordeon3" class="btn-acordeon">
                     <label for="btn-acordeon3">
-                        <span class="material-symbols-outlined">arrow_drop_down</span>
+                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
                         <h3>Nuestras misiones</h3>
                     </label>
                     <div class="contenido-acordeon">
@@ -70,9 +74,9 @@
                 </div>
                 
                 <div class="acordeon">
-                    <input type="radio" name="acordeon" id="btn-acordeon4" class="btn-acordeon">
+                    <input type="radio" name="acordeon" class="btn-acordeon4" class="btn-acordeon">
                     <label for="btn-acordeon4">
-                        <span class="material-symbols-outlined">arrow_drop_down</span>
+                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
                         <h3>Nuestra vision</h3>
                     </label>
                     <div class="contenido-acordeon">
