--- a/src/app/domains/aboutus/aboutus.component.css
+++ b/src/app/domains/aboutus/aboutus.component.css
@@ -1,153 +1,160 @@
-
-main{
+.main {
   max-width: 1600px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 3.2rem auto;
-  margin-top: 4rem;
-}
-
-.boxes{
-  width: 50%;
-  height: 600px;
-  margin: 1.2em;
-  display: flex;
+  margin: 0 auto;
+  padding: 0 2rem;
+  margin-top: 6rem;
   column-gap: 1rem;
 }
 
-.imagencarro{
+.mobile-bg__image {
   width: 100%;
-  aspect-ratio: 16/9;
+  height: 100%;
   display: none;
 }
 
-.box1{
-  width: 25%;
+.main__bg-container {
+  width: 60%;
+  min-width: 13rem;
+  max-width: 750px;
+  height: 33rem;
+  margin: 1.2rem;
+  display: flex;
+  gap: 1rem;
+  align-self: flex-start;
+}
+
+.bg-container__image {
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+
+.bg-container__image:nth-child(1) {
   height: 100%;
-  background-size: cover;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShaWwHk25rOFdbzWhtU8iT7A1IIBJandpDVg&s");
 }
 
-.box2{
-  width: 25%;
+.bg-container__image:nth-child(2) {
   height: 80%;
-  background-size: cover;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShaWwHk25rOFdbzWhtU8iT7A1IIBJandpDVg&s");
 }
 
-.box3{
-  width: 25%;
+.bg-container__image:nth-child(3) {
   height: 60%;
-  background-size: cover;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShaWwHk25rOFdbzWhtU8iT7A1IIBJandpDVg&s");
 }
 
-.box4{
-  width: 25%;
+.bg-container__image:nth-child(4) {
   height: 40%;
-  background-size: cover;
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShaWwHk25rOFdbzWhtU8iT7A1IIBJandpDVg&s");
 }
 
-.InformacionGeneral{
-  display: grid;
+.info-container {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.InformacionGeneral h1{
-  padding: 0.5em;
-  place-self: center;
-}
-
-.InformacionGeneral p{
-  padding: 0.5em;
-  max-width: 40em;
   text-align: center;
 }
 
-.contenedor-acordeon{
+.info-container__title {
+  font-family: var(--mochiy-title-font);
+  font-size: clamp(1rem, 5vw, 2rem);
+  margin-bottom: 1.5rem;
+}
+
+.info-container__title,
+.info-container p {
+  padding: 0.5em;
+}
+
+.info-container p {
+  max-width: 40em;
+}
+
+.info__acordeon-container {
   background: rgb(236, 226, 226);
+  width: 100%;
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem auto;
+  row-gap: .5rem;
+  overflow: hidden;
+}
+
+.info__acordeon {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.acordeon__title {
+  background-image: url("../../../assets/img/navbar_png.png");
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  padding: 1rem;
+  cursor: pointer;
   border: 3px solid black;
-  border-radius: 10px;
-  max-width: 100%;
-  margin: 2em;
-  display: grid;
-  align-items: flex-end;
-  justify-content: flex-end;
+  border-radius: 5px;
+  color: white;
+  font-family: var(--aclonica-title-font);
+  font-weight: 700;
 }
 
-.acordeon{
-  background: white;
-
-}
-
-.acordeon .triangulo{
+.arrow-icon {
   height: 1rem;
   width: 1rem;
-  margin: 1rem;
+  margin-bottom: .12rem;
 }
 
-.acordeon h3{
-  font-size: 1.5em;
-
-}
-
-.acordeon label{
-  display: flex;
-  padding: 1.25em;
-  cursor: pointer;
-  margin-bottom: 0.125em;
-  transition:  all 300ms ease;
-  align-items: center;
-}
-
-#titulo{
-  color: #1c1c1c;
-  font-size: 1.2em;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-
-.acordeon .contenido-acordeon{
-  padding: 0em;
-  margin: 0em 1.25em;
-  max-height: 0em;
-  overflow: hidden;
-  transition: all 300ms ease;
-}
-
-.btn-acordeon:checked ~ .contenido-acordeon{
-  max-height: 100%;
-  padding: 0.1em 2em;
-}
-
-.btn-acordeon{
+.acordeon__content {
+  border-right: 3px solid black;
+  border-left: 3px solid black;
+  border-end-end-radius: 10px;
+  border-end-start-radius: 10px;
+  padding: 1rem;
   display: none;
+  transition: all .3s ease;
+  max-width: 762px;
 }
 
-@media screen and (max-width: 900px){
-  .contenedor-acordeon{
+.acordeon__content:last-child {
+  border-bottom: 3px solid black;
+}
+
+.show-content {
+  display: block;
+}
+
+@media screen and (max-width: 900px) {
+  .info__acordeon-container {
     width: 90%;
+    margin: 2rem auto;
   }
 }
 
-@media screen and (max-width:768px){
-  #boxes{
+@media screen and (max-width: 768px) {
+  .main {
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 0;
+    margin-top: 5rem;
+  }
+
+  .main__bg-container {
     display: none;
   }
-  .imagencarro{
+
+  .mobile-bg__image {
     display: block;
+    margin-bottom: 1rem;
+    border-radius: 10px;
   }
-  main{
-    flex-direction: column;
-    margin: inherit 1rem;
-  }
-  .section{
-    order: 2;
-  }
-  .section2{
-    order: 1;
-  }
-} 
-
-
-
+}
