--- a/src/app/domains/aboutus/aboutus.component.html
+++ b/src/app/domains/aboutus/aboutus.component.html
@@ -1,96 +1,80 @@
-<app-header/>
+<app-header />
 
-    <main>
-        <section class="section">
-            <img src="https://images.unsplash.com/photo-1717496002081-38a90d3cba26?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="imagencarro">
-        </section>
+<main class="main">
+    <section class="main__mobile-bg">
+        <img src="https://images.unsplash.com/photo-1539635278303-d4002c07eae3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="" class="mobile-bg__image">
+    </section>
 
-        <section class="boxes">
+    <section class="main__bg-container">
 
-            <div class="box1">
-            </div>
-    
-            <div class="box2">
-            </div>
+        <div class="bg-container__image">
+        </div>
 
-            <div class="box3">
-            </div>
+        <div class="bg-container__image">
+        </div>
 
-            <div class="box4">
-            </div>
-    
-        </section>
+        <div class="bg-container__image">
+        </div>
 
-        <section>
-            <div class="Container">
-                <div class="InformacionGeneral">
-                    <h1>Quienes somos</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Esse fugiat voluptas sed, sunt consequuntur facilis iure in 
-                        labore nesciunt minus doloremque molestiae dignissimos reprehenderit,
-                         accusantium deserunt minima tempora. Corrupti, eaque.
-                    </p>
+        <div class="bg-container__image">
+        </div>
+
+    </section>
+
+    <section class="main__info">
+        <div class="info-container">
+            <h1 class="info-container__title">About Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse fugiat voluptas sed, sunt consequuntur
+                facilis iure in labore nesciunt minus doloremque molestiae dignissimos reprehenderit, accusantium
+                deserunt minima tempora. Corrupti, eaque. </p>
+        </div>
+        <div class="info__acordeon-container">
+            <div class="info__acordeon">
+                <div class="acordeon__title">
+                    <img src="assets/img/arrow-icon.svg" alt="arrow icon" class="arrow-icon">
+                    <h3>El grupo</h3>
+                </div>
+                <div class="acordeon__content">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore temporibus fuga ad illum
+                        repudiandae placeat mollitia, optio iste! Consectetur, fugiat! lore</p>
                 </div>
             </div>
-            <div class="contenedor-acordeon">
-    
-                <div class="acordeon">
-                    <input type="radio" name="acordeon" class="btn-acordeon1" class="btn-acordeon">
-                    <label for="btn-acordeon1">
-                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
-                            <h3>El grupo</h3>
-                    </label>
-                    <div class="contenido-acordeon">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Labore temporibus fuga ad illum repudiandae placeat mollitia, 
-                            optio iste! Consectetur, fugiat!</p>
-                    </div>
+
+            <div class="info__acordeon">
+                <div class="acordeon__title">
+                    <img src="assets/img/arrow-icon.svg" alt="arrow icon" class="arrow-icon">
+                    <h3>Nuestros valores</h3>
                 </div>
-    
-                <div class="acordeon">
-                    <input type="radio" name="acordeon" class="btn-acordeon2" class="btn-acordeon">
-                    <label for="btn-acordeon2">
-                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
-                        <h3>Nuestros valores</h3>
-                    </label>
-                    <div class="contenido-acordeon">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Labore temporibus fuga ad illum repudiandae placeat mollitia, 
-                            optio iste! Consectetur, fugiat!</p>
-                    </div>
+                <div class="acordeon__content">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore temporibus fuga ad illum
+                        repudiandae placeat mollitia, optio iste! Consectetur, fugiat!</p>
                 </div>
-    
-                <div class="acordeon">
-                    <input type="radio" name="acordeon" class="btn-acordeon3" class="btn-acordeon">
-                    <label for="btn-acordeon3">
-                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
-                        <h3>Nuestras misiones</h3>
-                    </label>
-                    <div class="contenido-acordeon">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Labore temporibus fuga ad illum repudiandae placeat mollitia, 
-                            optio iste! Consectetur, fugiat!</p>
-                    </div>
-                </div>
-                
-                <div class="acordeon">
-                    <input type="radio" name="acordeon" class="btn-acordeon4" class="btn-acordeon">
-                    <label for="btn-acordeon4">
-                          <img src="https://cdn-icons-png.flaticon.com/512/0/159.png" alt="" class="triangulo">
-                        <h3>Nuestra vision</h3>
-                    </label>
-                    <div class="contenido-acordeon">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Labore temporibus fuga ad illum repudiandae placeat mollitia, 
-                            optio iste! Consectetur, fugiat!</p>
-                    </div>
-                </div>
-    
             </div>
 
-        </section>
+            <div class="info__acordeon">
+                <div class="acordeon__title">
+                    <img src="assets/img/arrow-icon.svg" alt="arrow icon" class="arrow-icon">
+                    <h3>Misión</h3>
+                </div>
+                <div class="acordeon__content">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore temporibus fuga ad illum
+                        repudiandae placeat mollitia, optio iste! Consectetur, fugiat!</p>
+                </div>
+            </div>
 
-    </main>
-    
-<app-footer/>
+            <div class="info__acordeon">
+                <div class="acordeon__title">
+                    <img src="assets/img/arrow-icon.svg" alt="arrow icon" class="arrow-icon">
+                    <h3>Visión</h3>
+                </div>
+                <div class="acordeon__content">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore temporibus fuga ad illum
+                        repudiandae placeat mollitia, optio iste! Consectetur, fugiat!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
+<app-footer />
