--- a/src/app/domains/login/login.component.html
+++ b/src/app/domains/login/login.component.html
@@ -12,32 +12,23 @@
 
           <div class="text-field">
             <label for="email">Email</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              autocomplete="off"
-              placeholder="you@example.com"
-              required formControlName="email"
-            />
+            <input type="email" id="email" name="email" placeholder="you@example.com" required
+              formControlName="email" />
             <div class="error-message">Email in incorrect format</div>
           </div>
+
           <div class="text-field">
             <label for="password">Password</label>
-            <input
-              id="password"
-              type="password"
-              name="password"
-              placeholder="Your password"
-              title="Minimum 6 characters at least 1 Alphabet and 1 Number"
-              pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$"
-              required formControlName="password"
-            />
-            <div class="error-message">
-              Minimum 6 characters at least 1 Alphabet and 1 Number
-            </div>
+            <input id="password" type="password" name="password" placeholder="Your password"
+              required formControlName="password" />
           </div>
+
+          <div *ngIf="errorMessage" class="error__message">
+            {{ errorMessage }}
+          </div>
+
           <button class="login-form__button" type="submit">Log In</button>
+
           <div class="login-form__actions">
             <div class="login-form__row">
               <span>Don't have an account?</span>
@@ -46,6 +37,7 @@
               </a>
             </div>
           </div>
+
         </form>
       </main>
       <aside class="info-side"></aside>
